@@ -6,6 +6,16 @@
 ** CHANGES ALONG trunk
 
 -----------------------------------------------------------------------
+2011-10-28  10:35:00 GMT Alberto Garcia <albertog@icmab.es>   trunk-389
+Re-instate reading of charge netcdf files
+
+This feature had been turned off after the BSC merge pending
+clarification.
+
+modified:
+  Src/dhscf.F
+
+-----------------------------------------------------------------------
 2011-10-28  10:15:00 GMT Alberto Garcia <albertog@icmab.es>   trunk-388
 Grid file utilities. User-specified mesh sizes
 
